--- a/VV570/HW6/submission.tex
+++ b/VV570/HW6/submission.tex
@@ -146,7 +146,49 @@
 %	PROBLEM 2
 %----------------------------------------------------------------------------------------
 \section{Integration}
-
+\begin{enumerate}
+	\item 
+		The number of nodes is too small s.t. the order of error is too large.
+	\item 
+		Denote
+		\begin{equation}
+			E(f) = \int_{a}^{b} f(x)dx - (b-a)f(\frac{a+b}{2})
+		\end{equation}
+		Thus
+		\begin{equation}
+			E(1) = (b-a) - (b-a) = 0
+		\end{equation}
+		\begin{equation}
+			E(x) = \frac{b^2-a^2}{2} - (b-a)\frac{b+a}{2} = 0
+		\end{equation}
+		and
+		\begin{equation}
+			E(x^2) = \frac{b^3-a^3}{3} - (b-a)(\frac{a+b}{2})^2 \neq 0
+		\end{equation}
+		Hence, the degree of this quadrature formula is $1$.\\
+		The kernel is determined as
+		\begin{equation}
+			\begin{aligned}
+				K_N(t) & = E(x\in [a, b] \rightarrow [(x-t)_+])\\
+					   & = \int_{a}^{b} f(x)dx - (b-a)f(\frac{a+b}{2})\\
+					   & = \int_{a}^{b} (x-t)_+dx - (b-a)(\frac{a+b}{2}-t)_+\\
+					   & = \frac{(b-t)_+^2 + (a-t)_+^2}{2} - (b-a)(\frac{a+b}{2}-t)_+
+			\end{aligned}
+		\end{equation} 
+		Divide the whole range into 4 sub-gap as $(-\infty, a]$,$(a, \frac{a+b}{2}]$,$(\frac{a+b}{2}, b]$,$(b, +\infty)$.
+		The non-negative property is seen when examine each gap.
+	\item 
+		\begin{proof}
+			As has been proved above, $k_N(t)$ is non-negative over $[a, b]$, so the first mean value theorem can be applied
+			\begin{equation}
+				\begin{aligned}
+					E(f) & = \frac{1}{N!} \int_{a}^{b}k_N(t)f''(t)dt\\
+					     & = f''(\xi) \int_{a}^{b}k_N(t)dt\\
+					     & = \frac{(b-a)^3}{24} f''(\xi)
+				\end{aligned}
+			\end{equation}
+		\end{proof}
+\end{enumerate}
 
 	
 %----------------------------------------------------------------------------------------
